# TestTaskSets

./: CMakeLists.txt  README.md  document.txt  kit.txt
TestTaskSets/: CMakeLists.txt  document.cpp  document.h  kit.cpp  kit.h  main.cpp
